@@ -148,6 +148,10 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-sunfire-plugin.version}</version>
+                <configuration>
+                    <forkCount>0</forkCount> 
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
